--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <button id="startButton">🎆 Kích hoạt Pháo Hoa</button>
+    <div id="newYearText">HAPPY NEW YEAR!</div>
     <div id="newYearText" class="hidden">HAPPY NEW YEAR!</div>
 
    <audio id="bgMusic" loop>
@@ -23,5 +24,6 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
