--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hand Controlled Fireworks</title>
+    <title>Fireworks New Year 2026</title>
     <link rel="stylesheet" href="style.css">
-   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <button id="startButton">🎆 Kích hoạt Pháo Hoa</button>
+    <button id="startButton">🎆 KÍCH HOẠT PHÁO HOA</button>
     <div id="newYearText">HAPPY NEW YEAR!</div>
-    <div id="newYearText" class="hidden">HAPPY NEW YEAR!</div>
 
-   <audio id="bgMusic" loop>
-    <source src="https://storage.googleapis.com/codeskulptor-demos/pysparkling/MerryChristmas.ogg" type="audio/ogg">
-   </audio>
+    <audio id="bgMusic" loop>
+        <source src="https://storage.googleapis.com/codeskulptor-demos/pysparkling/MerryChristmas.ogg" type="audio/ogg">
+    </audio>
 
     <script type="importmap">
         { "imports": { "three": "https://unpkg.com/three@0.160.0/build/three.module.js", "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/" } }
@@ -24,6 +22,3 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
-
-
-
