--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <button id="startButton">🎆 Kích hoạt Pháo Hoa</button>
     <div id="newYearText" class="hidden">HAPPY NEW YEAR!</div>
+    <div id="happyNewYear">Happy New Year</div>
 
    <audio id="bgMusic" loop>
     <source src="https://storage.googleapis.com/codeskulptor-demos/pysparkling/MerryChristmas.ogg" type="audio/ogg">
@@ -23,5 +24,6 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
 
 
