--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-  <!-- Canvas Three.js -->
+  <!-- CANVAS -->
   <canvas id="canvas"></canvas>
 
-  <!-- NÚT BẮT ĐẦU -->
+  <!-- NÚT START -->
   <button id="startButton">Start</button>
 
   <!-- CHỮ HAPPY NEW YEAR -->
@@ -18,10 +18,7 @@
     🎆 Happy New Year 🎆
   </div>
 
-  <!-- NHẠC (nếu có) -->
-  <audio id="bgMusic" src="music.mp3"></audio>
-
-  <!-- SCRIPT -->
-  <script type="module" src="script.js"></script>
+  <!-- SCRIPT (KHÔNG dùng module để tránh lỗi GitHub Pages) -->
+  <script src="script.js"></script>
 </body>
 </html>
