--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-  <!-- CANVAS -->
+  <!-- Canvas Three.js -->
   <canvas id="canvas"></canvas>
 
-  <!-- NÚT START -->
+  <!-- NÚT BẮT ĐẦU -->
   <button id="startButton">Start</button>
 
   <!-- CHỮ HAPPY NEW YEAR -->
@@ -18,7 +18,10 @@
     🎆 Happy New Year 🎆
   </div>
 
-  <!-- SCRIPT (KHÔNG dùng module để tránh lỗi GitHub Pages) -->
-  <script src="script.js"></script>
+  <!-- NHẠC (nếu có) -->
+  <audio id="bgMusic" src="music.mp3"></audio>
+
+  <!-- SCRIPT -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
