--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>New Year Fireworks</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Gesture Fireworks</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Canvas Three.js -->
+  <!-- CAMERA -->
+  <video id="video" autoplay playsinline></video>
+
+  <!-- CANVAS -->
   <canvas id="canvas"></canvas>
 
-  <!-- NÚT BẮT ĐẦU -->
+  <!-- START -->
   <button id="startButton">Start</button>
 
-  <!-- CHỮ HAPPY NEW YEAR -->
+  <!-- TEXT -->
   <div id="happyNewYear" class="hidden">
     🎆 Happy New Year 🎆
   </div>
 
-  <!-- NHẠC (nếu có) -->
-  <audio id="bgMusic" src="music.mp3"></audio>
+  <!-- MEDIAPIPE -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
-  <!-- SCRIPT -->
-  <script type="module" src="script.js"></script>
+  <!-- MAIN SCRIPT -->
+  <script src="script.js"></script>
 </body>
 </html>
