--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- CAMERA -->
-  <video id="video" autoplay playsinline></video>
+  <video id="video" autoplay playsinline muted></video>
 
   <!-- CANVAS -->
   <canvas id="canvas"></canvas>
@@ -21,7 +21,7 @@
     🎆 Happy New Year 🎆
   </div>
 
-  <!-- MEDIAPIPE -->
+  <!-- MEDIAPIPE (THỨ TỰ BẮT BUỘC) -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
